--- a/SCSS/note_contact.scss
+++ b/SCSS/note_contact.scss
@@ -88,6 +88,9 @@ h1, h2, h3, h4, h5, h6 {
   
 }
 
+/* --------------------------
+** form
+--------------------------- */
 .col-form-label {
   white-space: nowrap;
 }
@@ -101,4 +104,8 @@ h1, h2, h3, h4, h5, h6 {
     color: #fff;
     background-color: #52a44f;
     border-color: #52a44f;
+}
+
+.hide {
+  display: none;
 }
