スマホのレイアウトを調整

--- a/scss/note_contact.scss
+++ b/scss/note_contact.scss
@@ -1,4 +1,5 @@
-@charset "UTF-8";
+// Scss Document
+
 /* --------------------------
 ** HTML
 --------------------------- */
@@ -8,38 +9,34 @@ body, html {
   line-height: inherit;
   margin: 0;
 }
-
 audio, canvas, embed, iframe, img, object, svg, video {
-  display: block;
-  vertical-align: middle;
+    display: block;
+    vertical-align: middle;
 }
-
 img, video {
-  height: auto;
-  max-width: 100%;
+    height: auto;
+    max-width: 100%;
 }
-
 /* --------------------------
 ** Header
 --------------------------- */
 Header {
-  position: sticky;
-  /* ヘッダーの重なり回避 */
+  position: sticky; /* ヘッダーの重なり回避 */
   top: 0;
   z-index: 200;
   width: 100%;
   background-color: #55a152;
   display: block;
-}
-@media print {
-  Header {
+
+  @media print {
     display: none;
   }
-}
-Header .Header__inner {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+
+  .Header__inner {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
 }
 
 .Header__left {
@@ -47,44 +44,46 @@ Header .Header__inner {
   align-items: center;
   justify-content: space-between;
   padding-left: calc(50% - 720px);
-}
-.Header__left img {
-  margin: 9px 0 9px 30px;
+
+  img {
+    margin: 9px 0 9px 30px;
+  }
+
 }
 
 /* --------------------------
 ** main
 --------------------------- */
 main {
-  /*margin-top: 80px;*/
-  /* ヘッダーの重なり回避 */
+  /*margin-top: 80px;*/ /* ヘッダーの重なり回避 */
+   .container {
+    margin: 20px auto;
+    max-width: 877px;
+  }
+  .bgc_white {
+    background-color: #FFFFFF;
+  }
+  .cont_04 {
+    padding: 30px;
+  }
 }
-main .container {
-  margin: 20px auto;
-  max-width: 877px;
-}
-main .bgc_white {
-  background-color: #FFFFFF;
-}
-main .cont_04 {
-  padding: 30px;
-}
-
 h1, h2, h3, h4, h5, h6 {
   font-size: inherit;
   font-weight: inherit;
 }
-
 .PageTitle {
-  color: #1f1f1f;
-  font-size: 24px;
-  margin-bottom: 4.2666666667vw;
+    color: #1f1f1f;
+    font-size: 24px;
+    margin-bottom: 4.2666666667vw;
+
+	@media (min-width: 769px){
+		font-size: 28px;
+		margin-bottom: 16px;
+	}
 }
-@media (min-width: 769px) {
-  .PageTitle {
-    font-size: 28px;
-    margin-bottom: 16px;
-  }
+
+.container {
+  
 }
 
 /* --------------------------
@@ -95,12 +94,12 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .col-md-2 {
-  flex: 0 0 20%;
-  max-width: 20%;
+    flex: 0 0 20%;
+    max-width: 20%;
 }
 
 .btn-primary {
-  color: #fff;
-  background-color: #52a44f;
-  border-color: #52a44f;
+    color: #fff;
+    background-color: #52a44f;
+    border-color: #52a44f;
 }
