--- a/scss/note_contact.scss
+++ b/scss/note_contact.scss
@@ -55,7 +55,7 @@ Header {
 ** main
 --------------------------- */
 main {
-  /*margin-top: 80px;*/ /* ヘッダーの重なり回避 */
+  margin-top: 14px; /* ヘッダーの重なり回避 */
   @media (min-width: 769){
      .container {
       margin: 20px auto;
@@ -64,6 +64,7 @@ main {
   }
   .bgc_white {
     background-color: #FFFFFF;
+    
   }
   .cont_04 {
     padding: 30px;
@@ -92,7 +93,13 @@ main {
     flex: 0 0 20%;
     max-width: 20%;
 }
-
+@media (min-width: 768px){
+  .col-md-10 {
+      -ms-flex: 0 0 100%;
+      flex: 0 0 100%;
+      max-width: 100%;
+  }
+}
 .btn-primary {
     color: #fff;
     background-color: #52a44f;
