ボタンを中央寄せ

--- a/scss/note_contact.scss
+++ b/scss/note_contact.scss
@@ -101,7 +101,9 @@ main {
   }
 }
 .btn-primary {
-    color: #fff;
-    background-color: #52a44f;
-    border-color: #52a44f;
+  color: #fff;
+  background-color: #52a44f;
+  border-color: #52a44f;
+  display: block;
+  margin: 0 auto;
 }
