--- a/scss/fukui.scss
+++ b/scss/fukui.scss
@@ -4,7 +4,7 @@
 ** HTML
 --------------------------- */
 body, html {
-  background-color: #eee;
+  background-color: #f5f5f5;
   font-family: "Yu Gothic Medium","Hiragino Kaku Gothic ProN","Hiragino Sans",Meiryo,sans-serif;
   line-height: inherit;
   margin: 0;
@@ -68,18 +68,26 @@ main {
   }
   .cont_04 {
     padding: 30px;
+    @media (min-width:769px){
+      padding: 50px;
+    }
   }
 }
 
 .PageTitle {
     color: #1f1f1f;
     font-size: 24px;
-    margin-bottom: 4.2666666667vw;
+    //margin-bottom: 4.2666666667vw;
+    text-align: center;
 
 	@media (min-width: 769px){
 		font-size: 28px;
 		margin-bottom: 16px;
 	}
+}
+
+.preface {
+    //padding: 0 2%;
 }
 
 /* --------------------------
